// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button visual snapshots > loading state matches snapshot 1`] = `
<button
  aria-busy="true"
  class="inline-flex items-center justify-center gap-2 font-medium transition-all focus-visible:outline-2 focus-visible:outline-ring focus-visible:outline-offset-2 border rounded-lg bg-primary text-primary-foreground border-transparent hover:bg-primary/90 px-4 py-2 text-sm min-h-9 opacity-70 cursor-wait pointer-events-none"
  data-disabled="false"
  data-loading="true"
  data-size="md"
  data-variant="primary"
  disabled=""
  tabindex="0"
  type="button"
>
  Saving
</button>
`;

exports[`Button visual snapshots > primary default matches snapshot 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-medium cursor-pointer transition-all focus-visible:outline-2 focus-visible:outline-ring focus-visible:outline-offset-2 border rounded-lg bg-primary text-primary-foreground border-transparent hover:bg-primary/90 px-4 py-2 text-sm min-h-9"
  data-disabled="false"
  data-loading="false"
  data-size="md"
  data-variant="primary"
  tabindex="0"
  type="button"
>
  Submit
</button>
`;

exports[`Button visual snapshots > secondary matches snapshot 1`] = `
<button
  class="inline-flex items-center justify-center gap-2 font-medium cursor-pointer transition-all focus-visible:outline-2 focus-visible:outline-ring focus-visible:outline-offset-2 border rounded-lg bg-secondary text-secondary-foreground border-transparent hover:bg-secondary/80 px-4 py-2 text-sm min-h-9"
  data-disabled="false"
  data-loading="false"
  data-size="md"
  data-variant="secondary"
  tabindex="0"
  type="button"
>
  Cancel
</button>
`;
